--- a/force-app/main/default/layouts/Transaction__c-Transaction Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Transaction__c-Transaction Layout.layout-meta.xml
@@ -22,6 +22,10 @@
                 <behavior>Required</behavior>
                 <field>Amount__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>AmountAllFinancialEntries__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -59,6 +63,10 @@
         <layoutColumns/>
         <style>CustomLinks</style>
     </layoutSections>
+    <relatedLists>
+        <fields>NAME</fields>
+        <relatedList>FinancialEntry__c.Transaction__c</relatedList>
+    </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
     <showHighlightsPanel>false</showHighlightsPanel>
     <showInteractionLogPanel>false</showInteractionLogPanel>
